--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="temperature">%1$f °C / %2$f °F</string>
     <string name="wind">speed: %1$f | deg: %2$d </string>
     <string name="standard_deviation">SD: %1$f</string>
+    <string name="no_internet">NO INTERNET AVAILABLE</string>
 </resources>
